Revert "Tela de Vendas"
This reverts commit 683c0ededa44ee593818459b1abb9bfe49ccdd05.

--- a/src/br/com/alphacars/telas/TelaUsuarios.form
+++ b/src/br/com/alphacars/telas/TelaUsuarios.form
@@ -9,7 +9,7 @@
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="AlphaCars - Cadastro de Funcion&#xe1;rios"/>
+    <Property name="title" type="java.lang.String" value="AlphaCars - Cadastro de Usu&#xe1;rios"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
