--- a/src/br/com/alphacars/telas/TelaUsuarios.form
+++ b/src/br/com/alphacars/telas/TelaUsuarios.form
@@ -269,6 +269,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Pesquisar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPesquisarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtNomePesquisa">
         </Component>
@@ -332,10 +335,8 @@
                                   <Component id="txtNumero" alignment="0" min="-2" pref="60" max="-2" attributes="0"/>
                                   <Component id="txtformCep" alignment="0" min="-2" pref="80" max="-2" attributes="0"/>
                                   <Component id="txtBairro" alignment="0" min="-2" pref="180" max="-2" attributes="0"/>
-                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="txtformTelefone" alignment="0" pref="107" max="32767" attributes="0"/>
-                                      <Component id="txtformCpf" alignment="0" pref="107" max="32767" attributes="0"/>
-                                  </Group>
+                                  <Component id="txtformTelefone" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtformCpf" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="txtCidade" min="-2" pref="120" max="-2" attributes="0"/>
